--- a/css/styles.css
+++ b/css/styles.css
@@ -46,3 +46,10 @@ body{
 #iform{
     margin:20px;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
