--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,10 @@ body{
 }
 
 #iform{
-    margin:20px;
+    padding: 20px;
+}
+.form-buttons,.form-group-row{
+    padding-bottom: 20px;
 }
 
 .tab-content {
