--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,6 +26,18 @@ $carousel-item-height: 300px;
     @include zero-margin(20px, 0px);
 }
 
+.modal-header{
+    background-color: $background-dark;
+
+    .close{
+        color:$lt-gray;
+    }
+}
+
+.modal-body{
+    background-color: $background-pale;
+}
+
 .jumbotron {
     @include zero-margin(70px,30px);
     background: $background-light ;
